--- a/Project.toml
+++ b/Project.toml
@@ -11,5 +11,5 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 [compat]
 CairoMakie = "0.7, 0.8, 0.9"
 LaTeXStrings = "1"
-Makie = "0.16, 0.17, 0.18"
+Makie = "0.16, 0.17, 0.18, 0.19"
 julia = "1.6"
